--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1023,7 +1023,8 @@
                 "noDataLast6Months": "No data available for the last 6 months"
             },
             "history": {
-                "lastTransactions": "Last transactions"
+                "lastTransactions": "Last transactions",
+                "noDataLastTransactions": "No data available for the last transactions"
             }
         },
         "annualReport": {
