--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -874,6 +874,61 @@
                 "markAllAsReadError": "Error al marcar todas como leídas",
                 "archiveError": "Error al archivar la notificación",
                 "deleteError": "Error al eliminar la notificación"
+            },
+            "editor": {
+                "title": "Editor de Notificaciones",
+                "submit": "Enviar Notificación",
+                "success": "Notificación enviada correctamente",
+                "error": "Error al enviar la notificación",
+                "sending": "Enviando...",
+                "preview": "Vista previa",
+                "previewTitle": "Vista previa de la notificación",
+                "previewInfo": "Así es como aparecerá tu notificación a los destinatarios",
+                "previewNoTitle": "Sin título",
+                "previewNoMessage": "Sin mensaje",
+                "previewSentNow": "Ahora mismo",
+                "previewTargetAudience": "Destinatarios",
+                "previewScheduledFor": "Programada para",
+                "fields": {
+                    "type": {
+                        "label": "Tipo de notificación"
+                    },
+                    "targetAudience": {
+                        "label": "Destinatarios",
+                        "options": {
+                            "all": "Todos los usuarios",
+                            "free": "Usuarios gratuitos",
+                            "paid": "Usuarios de pago",
+                            "specific": "Usuarios específicos"
+                        }
+                    },
+                    "specificUsers": {
+                        "label": "IDs de usuarios",
+                        "helper": "Introduce los IDs de usuario separados por comas"
+                    },
+                    "title": {
+                        "label": "Título"
+                    },
+                    "message": {
+                        "label": "Mensaje",
+                        "helper": "Breve descripción que aparecerá en la notificación"
+                    },
+                    "content": {
+                        "label": "Contenido HTML",
+                        "helper": "Contenido detallado en formato HTML (opcional)"
+                    },
+                    "scheduledAt": {
+                        "label": "Programar envío",
+                        "helper": "Fecha y hora para enviar la notificación (opcional)"
+                    }
+                },
+                "errors": {
+                    "typeRequired": "El tipo de notificación es obligatorio",
+                    "targetRequired": "Debes seleccionar los destinatarios",
+                    "specificUsersRequired": "Debes especificar al menos un ID de usuario",
+                    "titleRequired": "El título es obligatorio",
+                    "messageRequired": "El mensaje es obligatorio"
+                }
             }
         },
         "settings": {
