Mejora de NavMovil y añadimos boton de crear transaccion desde Nav

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -707,6 +707,7 @@
             "logout": "Log out",
             "noData": "No data available",
             "retry": "Retry",
+            "more": "More",
             "colors": {
                 "background": "Background color",
                 "text": "Text color"
